@@ -29,7 +29,7 @@ public class MapperHelper {
 
     public Integer getStepOffset(List<S2Term> termList, Integer index) {
         List<Integer> offsetList = termList.stream().sorted(Comparator.comparing(S2Term::getOffset))
-                .map(term -> term.getOffset()).collect(Collectors.toList());
+                .map(S2Term::getOffset).toList();
 
         for (int j = 0; j < termList.size() - 1; j++) {
             if (offsetList.get(j) <= index && offsetList.get(j + 1) > index) {
@@ -47,8 +47,6 @@ public class MapperHelper {
     /**
      * * exist dimension values
      *
-     * @param natures
-     * @return
      */
     public boolean existDimensionValues(List<String> natures) {
         for (String nature : natures) {
